...
<resources>
    <string name="kaleyra_call_sheet_enable">Enable</string>
    <string name="kaleyra_call_sheet_disable">Disable</string>
    <string name="kaleyra_call_sheet_answer">Join</string>
    <string name="kaleyra_call_sheet_chat">Chat</string>
    <string name="kaleyra_call_sheet_whiteboard">Whiteboard</string>
    <string name="kaleyra_call_sheet_audio">Audio</string>
    <string name="kaleyra_call_sheet_file_share">File share</string>
    <string name="kaleyra_call_sheet_screen_share">Screen share</string>
    <string name="kaleyra_call_sheet_virtual_background">Virtual background</string>
    <string name="kaleyra_call_sheet_pin">Pin</string>
    <string name="kaleyra_call_sheet_unpin">Unpin</string>
    <string name="kaleyra_fullscreen">Fullscreen</string>
    <string name="kaleyra_call_sheet_fullscreen_on">Fullscreen</string>
    <string name="kaleyra_call_sheet_fullscreen_off">Exit</string>
    <string name="kaleyra_call_sheet_zoom" translatable="false">Zoom</string>
...
    <string name="kaleyra_call_sheet_on">On</string>
    <string name="kaleyra_call_sheet_off">Off</string>
    <string name="kaleyra_call_sheet_active">Active</string>
    <string name="kaleyra_call_sheet_disabled">Disabled</string>
    <string name="kaleyra_call_sheet_hang_up">Hang up</string>
    <string name="kaleyra_call_sheet_hang_up_action">End</string>
    <string name="kaleyra_call_sheet_description_more_actions">Show more actions</string>
    <string name="kaleyra_call_sheet_description_hide_actions">Hide actions</string>
    <string name="kaleyra_call_sheet_description_enable_microphone">Enable microphone</string>
    <string name="kaleyra_call_sheet_description_disable_microphone">Disable microphone</string>
    <string name="kaleyra_call_sheet_description_enable_camera">Enable camera</string>
    <string name="kaleyra_call_sheet_description_disable_camera">Disable camera</string>
    <string name="kaleyra_call_sheet_description_stop_screen_share">Stop screen share</string>
    <string name="kaleyra_call_sheet_description_mic_warning">Microphone warning</string>
...

    <string name="kaleyra_stream_pin">The stream is pinned</string>
    <string name="kaleyra_stream_fullscreen">The stream is fullscreen</string>
    <string name="kaleyra_stream_mic_disabled">The microphone is disabled</string>
    <string name="kaleyra_stream_muted_for_you">The stream is muted for you</string>
    <string name="kaleyra_stream_you">You</string>
    <string name="kaleyra_stream_other_participants">others</string>
    <string name="kaleyra_stream_show_participants">Show participants</string>
    <string name="kaleyra_stream_show_actions">Show the stream\'s actions</string>
    <string name="kaleyra_stream_dimmed">Stream not selected</string>
    <string name="kaleyra_stream_audio_level">Audio level</string>

    <string name="kaleyra_participants_component_change_layout">Change Layout</string>
    <string name="kaleyra_participants_component_users_in_call">Users in call</string>
    <string name="kaleyra_participants_component_users_invited">Invited</string>
    <string name="kaleyra_participants_component_mosaic">Mosaic</string>
    <string name="kaleyra_participants_component_auto">Auto</string>
    <string name="kaleyra_participants_component_pin_stream">Pin stream</string>
    <string name="kaleyra_participants_component_unpin_stream">Unpin stream</string>
...
        <item quantity="one">%d Participant</item>
        <item quantity="many">%d Participants</item>
        <item quantity="other">%d Participants</item>
    </plurals>

    <!-- Audio route labels -->
    <string name="kaleyra_audio_route_title">Select an audio output</string>
    <string name="kaleyra_call_action_audio_route_bluetooth">Bluetooth</string>
    <string name="kaleyra_call_action_audio_route_wired_headset">Wired headset</string>
    <string name="kaleyra_call_action_audio_route_loudspeaker">Loudspeaker</string>
    <string name="kaleyra_call_action_audio_route_earpiece">Earpiece</string>
    <string name="kaleyra_call_action_audio_route_muted">Muted</string>
    <string name="kaleyra_call_action_audio_route_bluetooth_connected">Connected</string>
...
    <!-- SNAPSHOT -->
    <string name="kaleyra_snapshot_save">Save screen snapshot</string>
    <string name="kaleyra_snapshot_close">Close snapshot dialog</string>


    <!-- SCREEN SHARE PICKER -->
    <string name="kaleyra_screenshare_picker_title">What do you want to share?</string>
    <string name="kaleyra_screenshare_app_only">App only screen</string>
    <string name="kaleyra_screenshare_full_device">Whole device screen</string>

    <!-- VIRTUAL BACKGROUND PICKER -->
    <string name="kaleyra_virtual_background_picker_title">Select virtual background</string>
    <string name="kaleyra_virtual_background_none">None</string>
    <string name="kaleyra_virtual_background_blur">Blur</string>
    <string name="kaleyra_virtual_background_image">Virtual background</string>

    <!-- FILE SHARE -->
    <string name="kaleyra_fileshare">File Share</string>
...
