...
import kotlinx.coroutines.launch

internal val SideBarBorderWidth = 1.dp
internal val SidePanelPadding = 4.dp
internal val SideBarShape = RoundedCornerShape(size = 8.dp)

internal val SidePanelTag = "SidePanelTag"

@Composable
internal fun SidePanel(
    modularComponent: ModularComponent,
    onDismiss: () -> Unit,
    onRequestOtherModularComponent: (ModularComponent) -> Unit,
...
